// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JS based ESM > GIVEN no plugin options THEN injects version 1`] = `
"//#region tests/fixtures/build-in/javascript.mjs
const version = "0.0.5";
//#endregion
export { version };
"
`;

exports[`JS based ESM > GIVEN versionOrCurrentDate = "current-date" THEN injects current date 1`] = `
"//#region tests/fixtures/build-in/javascript.mjs
const version = "2022-02-01T14:30:30.000Z";
//#endregion
export { version };
"
`;
